# CppExercises

./: .gitignore
Chapter4_Computation/Ex1/: Ex1.cpp  main.cpp
Chapter4_Computation/Ex2/: Ex2.cpp  main.cpp
Chapter4_Computation/Ex3/: Ex3.cpp  Ex3.h  main.cpp
Chapter4_Computation/Ex4/: Ex4.cpp  main.cpp
Chapter4_Computation/Ex5/: Ex5.cpp  main.cpp
Chapter4_Computation/Ex6/: CMakeLists.txt  Ex6.cpp  main.cpp
Chapter4_Computation/Ex7/: Ex7.cpp  main.cpp
